# portfolio_manager

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
pm/: config.py.secret  indi.py  log.py  run.py
pm/calculator/: __init__.py  current.py
pm/control/: __init__.py  casting.py  shi.py
pm/control/calculator/: __init__.py
pm/control/gopax/: __init__.py
pm/control/indi/: __init__.py  kr_info.py  kr_market.py  stock_acnt.py  total_acnt.py
pm/control/kor/: __init__.py
pm/control/kr/: __init__.py
pm/control/manipulator/: __init__.py
pm/control/shi/: __init__.py
pm/control/view/: pbar_cntr.py  tb_cntr.py
pm/manipulator/: __init__.py
pm/templates/: main.ui
pm/utils/: casting.py
pm/view/: __init__.py
